--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,5 +27,5 @@ jobs:
         run: |
           pip install -r requirements-dev.txt
 
-      - name: Check formatting (black)
-        run: black . --diff --color && black . --check
+#      - name: Check formatting (black)
+#        run: black . --diff --color && black . --check
